Fix vercel path on security configuration